some more stylistic improvemens

--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -12,8 +12,8 @@
         </h1>
         <h2 class="hero-subtitle">Scientific Software Engineer</h2>
         <p class="hero-description">
-          I advance science through modern technologies. 
-          Passionate about solving complex problems through software and investigation.
+          Advancing science through modern technologies. 
+          Passionate about solving complex problems through software and research.
         </p>
         <div class="hero-buttons">
           <p-button 
