--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -1,7 +1,7 @@
 <section id="projects" class="projects">
   <div class="container">
     <div class="section-header" pAnimateOnScroll enterClass="fadeinup" duration="1000">
-      <h2 class="section-title">Featured Projects</h2>
+      <h2 class="section-title">Software Projects</h2>
       <p class="section-subtitle">Some things I've built</p>
     </div>
 
