--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -77,6 +77,7 @@
         icon="pi pi-arrow-right" 
         size="large"
         severity="secondary"
+        (click)="openUrl('https://github.com/luisfabib?tab=repositories')"
         [outlined]="true">
       </p-button>
     </div>
