update projects and fix phone screen css

--- a/src/app/components/awards/awards.component.scss
+++ b/src/app/components/awards/awards.component.scss
@@ -222,6 +222,9 @@
       flex-direction: column;
       text-align: center;
       
+      .award-info {
+        margin: 0 auto;
+      }
       .award-icon {
         align-self: center;
       }
