--- a/src/app/components/experience/experience.component.scss
+++ b/src/app/components/experience/experience.component.scss
@@ -322,6 +322,11 @@
         text-align: center;
         gap: 1rem;
         
+        .position-info {
+          text-align: center;
+          margin: 0 auto;
+        }
+        
         .company-avatar {
           align-self: center;
         }
