--- a/src/app/components/certifications/certifications.component.scss
+++ b/src/app/components/certifications/certifications.component.scss
@@ -299,6 +299,9 @@
       flex-direction: column;
       text-align: center;
       
+      .cert-info {
+        margin: 0 auto;
+      }
       .cert-icon {
         align-self: center;
       }
