add automated PDF CV generator based on homepage content

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -15,10 +15,7 @@
              into simple, beautiful and intuitive solutions.
           </p>
           <p>
-            A strong communicator with a track record of success leading cross-functional projects.
-            Committed to utilizing the latest tools and techniques to drive innovation. Adept at
-            leveraging technical skills in data science, and software engineering to deliver actionable
-            insights and impactful outcomes.
+            {{description}}
           </p>
         </div>
       </div>
