--- a/src/app/components/publications/publications.component.html
+++ b/src/app/components/publications/publications.component.html
@@ -15,7 +15,7 @@
             <div class="stat-label">Total Publications</div>
           </div>
           <div class="stat-item">
-            <div class="stat-number">{{ totalCitations }}</div>
+            <div id="total-citations" class="stat-number">{{ totalCitations }}</div>
             <div class="stat-label">Total Citations</div>
           </div>
           <div class="stat-item">
