add personal logo

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,6 +2,7 @@
   <p-toast></p-toast>
   <div class="container">
         <div class="nav-brand">
+      <img src="images/personal-logo.svg" alt="Personal Logo" class="brand-logo">
       <h2 class="brand-title">Luis Fábregas-Ibáñez</h2>
     </div>
     
