--- a/src/app/components/awards/awards.component.scss
+++ b/src/app/components/awards/awards.component.scss
@@ -65,18 +65,19 @@
     gap: 1rem;
     
     .award-icon {
-      background: linear-gradient(135deg, #f59e0b, #f97316);
+      background: white;
       width: 60px;
       height: 60px;
-      border-radius: 12px;
+      padding: .5rem;
+      border-radius: 50%;
       display: flex;
       align-items: center;
       justify-content: center;
       flex-shrink: 0;
       
-      i {
-        font-size: 1.5rem;
-        color: white;
+      img {
+        max-height: 100%;
+        border-radius: 50%;
       }
     }
     
